# ml-tsu-module-2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  load.py  pyproject.toml  train.py
My-First-Project-1/: README.roboflow.txt  data.yaml
My-First-Project-1/train/labels/: 2026-03-24-19-43-30_mp4-0001_jpg.rf.2ccb3432b607d07f8d6eb0dd38efdf7c.txt  2026-03-24-19-43-30_mp4-0002_jpg.rf.cfdaa71205112e360193671326392be6.txt  2026-03-24-19-43-30_mp4-0003_jpg.rf.fd3c74309182efbd62e5221b87236963.txt  2026-03-24-19-43-30_mp4-0008_jpg.rf.b433b8e24fe81eff5b5751362c57f2ef.txt  2026-03-24-19-43-30_mp4-0009_jpg.rf.ce0242ce62b636f1ddd24a646c5e9f0b.txt  2026-03-24-19-43-30_mp4-0013_jpg.rf.ab034afab516a88b3ff20104f4a101e3.txt  2026-03-24-19-43-30_mp4-0015_jpg.rf.327fb7811790f2bff53199002b70f491.txt  2026-03-24-19-43-30_mp4-0021_jpg.rf.ed68cc9dd6fed4ac1cd4675c9e6be801.txt  2026-03-24-19-43-30_mp4-0024_jpg.rf.278f7e25e26a57d8616af03482c5b909.txt  2026-03-24-19-43-30_mp4-0029_jpg.rf.a5419d435ceb70ab31fc338f07d7d80f.txt  2026-03-24-19-43-30_mp4-0031_jpg.rf.8bbe1452680788729dfa28f7818f2312.txt  2026-03-24-19-43-30_mp4-0034_jpg.rf.f33bb3e3eabee2d93cc0f7105a6f6ce1.txt  2026-03-24-19-43-30_mp4-0036_jpg.rf.c35d1d1caeba7fe2555144687fe09fa2.txt  2026-03-24-19-43-30_mp4-0039_jpg.rf.7d52a9fd067b4397c1e8fd1e7fc96382.txt  (+49 more)
My-First-Project-2/: data.yaml
My-First-Project-2/train/: labels.cache
data/: README.roboflow.txt
data/valid/: labels.cache
project/: main.py  model_impl.py
runs/detect/train/: args.yaml  results.csv
scripts/: check.py  load.py  train.py
(+119 files in other folders)
